@@ -94,7 +94,7 @@ namespace GtkSharp.Generation {
 			AddType (new ManualGen ("GSList", "GLib.SList"));
 			AddType (new ManualGen ("GList", "GLib.List"));
 			AddType (new ByRefGen ("GValue", "GLib.Value"));
-			AddType (new ManualGen ("GObject", "GLib.Object"));
+			AddType (new GObjectGen ());
 		}
 		
 		public void AddType (IGeneratable gen)
