@@ -1,3 +1,13 @@
+2004-04-16  Rachel Hestilow  <rachel@nullenvoid.com>
+
+	* generator/GObjectGen.cs: Added new generatable to handle
+	plain GObjects the same way we do subclasses.
+	* generator/ManualGen.cs: Make FromNative/FromNativeReturn virtual
+	to allow overriding.
+	* generator/SymbolTable.cs: Use GObjectGen instead of
+	ManualGen for GObject.
+	* generator/Makefile.am: Add GObjectGen.cs.
+
 2004-04-16  Boyd Timothy  <btimothy@novell.com>
 
 	* gdk/Global.custom : properties to expose window manager spec
